<resources>
    <string name="app_name">ELifeAdmin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="reset_pwd">Reset password</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lyrics">Lyrics</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="select_category">Category:</string>
    <string name="select_status">Status:</string>
    <string name="upload_file">Upload file</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="change_password">Change password</string>
    <string name="create_new_account">Create new account</string>
    <string name="old_pwd">Old password</string>
    <string name="new_pwd">New password</string>
    <string name="confirm_new_pwd">Confirm new password</string>
    <string name="dashboard">Dashboard</string>
    <string name="categories">Categories</string>
    <string name="add_new">Add new</string>
    <string name="topics">Topics</string>
    <string name="new_topic">New topic</string>
    <string name="audios">Audios</string>
    <string name="new_audio">New audio</string>
    <string name="forgot_pwd_note">Enter your user account\'s verified email address and we will send you a password reset link.</string>
    <string name="already_have_an_account">Already have an account? Sign in</string>
    <string name="logout">Logout</string>
    <string name="item_name">Item name</string>
    <string name="click_to_add_image">(Click to add image)</string>
    <string name="click_to_add_audio">(Click to add audio)</string>
    <string name="select_topic">Topic:</string>
    <string name="b">B</string>
    <string name="i">I</string>
    <string name="u">U</string>
    <string name="search">Search</string>
    <string name="file_name">Audio file name</string>
    <string name="title">Title</string>
    <string name="no_format">No format</string>
</resources>