<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/layout_margin_horizontal"
    tools:context=".ui.SignInFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_vertical"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/heading_1"
        android:textStyle="italic|bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_vertical"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/heading_2"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/emailEdt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edt_height"
        android:layout_marginTop="@dimen/layout_margin_vertical"
        android:background="@drawable/card_background"
        android:fontFamily="@font/ubuntu_regular"
        android:hint="@string/email"
        android:imeOptions="actionDone"
        android:includeFontPadding="false"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="@dimen/layout_margin_horizontal"
        android:textColor="@color/primaryColor"
        android:textColorHint="@color/primaryColor"
        android:textSize="@dimen/heading_4" />

    <EditText
        android:id="@+id/passwordEdt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edt_height"
        android:layout_marginTop="@dimen/layout_margin_vertical"
        android:background="@drawable/card_background"
        android:fontFamily="@font/ubuntu_regular"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:includeFontPadding="false"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/layout_margin_horizontal"
        android:textColor="@color/primaryColor"
        android:textColorHint="@color/primaryColor"
        android:textSize="@dimen/heading_4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_btn"
        android:layout_marginTop="@dimen/layout_margin_vertical"
        android:background="@drawable/button_background"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/heading_3" />

    <TextView
        android:id="@+id/forgotPwdTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_vertical"
        android:fontFamily="@font/ubuntu_regular"
        android:includeFontPadding="false"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/heading_4" />

    <TextView
        android:id="@+id/createNewAccountTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/ubuntu_regular"
        android:includeFontPadding="false"
        android:text="@string/create_new_account"
        android:textAlignment="center"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/heading_4" />
</LinearLayout>