<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/layout_margin_horizontal"
        tools:context=".ui.ForgotPasswordFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/layout_margin_vertical"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/heading_1"
            android:textStyle="italic|bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:includeFontPadding="false"
            android:text="@string/forgot_pwd_note"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/heading_4" />

        <EditText
            android:id="@+id/emailEdt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:layout_marginTop="@dimen/layout_margin_vertical"
            android:background="@drawable/card_background"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/layout_margin_horizontal"
            android:textColor="@color/primaryColor"
            android:textColorHint="@color/primaryColor"
            android:textSize="@dimen/heading_4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resetPwdBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_btn"
            android:layout_marginTop="@dimen/layout_margin_vertical"
            android:background="@drawable/button_background"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/reset_pwd"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/heading_3" />

        <LinearLayout
            android:id="@+id/backTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/ic_width"
                android:layout_height="@dimen/ic_height"
                android:layout_marginEnd="@dimen/layout_margin_horizontal"
                android:src="@drawable/ic_back"
                app:tint="@color/primaryColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:text="@string/back"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/heading_4" />
        </LinearLayout>

    </LinearLayout>
</layout>