<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/layout_margin_horizontal"
        tools:context=".ui.ChangePasswordFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/layout_margin_vertical"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/heading_1"
            android:textStyle="italic|bold" />

        <EditText
            android:id="@+id/oldPasswordEdt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:layout_marginTop="@dimen/layout_margin_vertical"
            android:background="@drawable/card_background"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/old_pwd"
            android:imeOptions="actionDone"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/layout_margin_horizontal"
            android:textColor="@color/primaryColor"
            android:textColorHint="@color/primaryColor"
            android:textSize="@dimen/heading_4" />

        <EditText
            android:id="@+id/newPasswordEdt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:layout_marginTop="@dimen/layout_margin_vertical"
            android:background="@drawable/card_background"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/new_pwd"
            android:imeOptions="actionDone"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/layout_margin_horizontal"
            android:textColor="@color/primaryColor"
            android:textColorHint="@color/primaryColor"
            android:textSize="@dimen/heading_4" />

        <EditText
            android:id="@+id/confirmNewPasswordEdt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:layout_marginTop="@dimen/layout_margin_vertical"
            android:background="@drawable/card_background"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/confirm_new_pwd"
            android:imeOptions="actionDone"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/layout_margin_horizontal"
            android:textColor="@color/primaryColor"
            android:textColorHint="@color/primaryColor"
            android:textSize="@dimen/heading_4" />

        <androidx.cardview.widget.CardView
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_btn"
            android:layout_marginTop="@dimen/layout_margin_vertical"
            app:cardBackgroundColor="@color/primaryColor"
            app:cardCornerRadius="@dimen/radius">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/ic_width"
                    android:layout_height="@dimen/ic_height"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/layout_margin_horizontal"
                    android:layout_toLeftOf="@id/saveText"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/saveText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/heading_3" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/backTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/ic_width"
                android:layout_height="@dimen/ic_height"
                android:layout_marginEnd="@dimen/layout_margin_horizontal"
                android:src="@drawable/ic_back"
                app:tint="@color/primaryColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:text="@string/back"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/heading_4" />
        </LinearLayout>

    </LinearLayout>
</layout>