<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="categoryViewModel"
            type="t3h.android.elifeadmin.viewmodels.CategoryViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.CreateNewCategoryFragment">

        <include
            android:id="@+id/appBarFragment"
            layout="@layout/fragment_app_bar" />

        <EditText
            android:id="@+id/nameEdt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
            android:layout_marginTop="@dimen/layout_margin_vertical"
            android:background="@drawable/card_background"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/name"
            android:imeOptions="actionDone"
            android:includeFontPadding="false"
            android:inputType="text"
            android:paddingHorizontal="@dimen/layout_margin_horizontal"
            android:text="@{categoryViewModel.categoryName}"
            android:textColor="@color/black"
            android:textColorHint="@color/primaryColor"
            android:textSize="@dimen/heading_4" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
            android:layout_marginTop="@dimen/layout_margin_vertical"
            android:background="@drawable/card_background"
            android:hint="@string/select_status"
            android:textColorHint="@color/primaryColor"
            android:visibility="gone"
            app:endIconTint="@color/primaryColor">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTxt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edt_height"
                android:background="@drawable/card_background"
                android:inputType="none"
                android:textSize="@dimen/heading_4" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_btn"
            android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
            android:layout_marginTop="@dimen/layout_margin_vertical"
            app:cardBackgroundColor="@color/primaryColor"
            app:cardCornerRadius="@dimen/radius">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/ic_width"
                    android:layout_height="@dimen/ic_height"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/layout_margin_horizontal"
                    android:layout_toLeftOf="@id/saveText"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/saveText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/heading_3" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>